fix overflow and iframe for mobile view

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -265,6 +265,7 @@ a {
 @media (max-width: 700px) {
 	
 body{
+  background-repeat: repeat;
   overflow-y: auto;
 }
 	.chat-main {
